# Decentralized-fiverr

./: .env  .gitignore  Anchor.toml  README.md  deployy.sh  package-lock.json  package.json  program_data.json  recover.json  tsconfig.json
client/: .env.example  next-auth.d.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
client/app/: globals.css  layout.tsx  loading.tsx  page.tsx  providers.tsx  socketListeners.tsx  socketwrapper.tsx
client/app/actions/: image.ts
client/app/admin/: page.tsx
client/app/create-seller-profile/: page.tsx
client/components/: aurorabg.tsx  buttons.tsx  buyOrders.tsx  buyerGigs.tsx  buyersDash.tsx  cancelOrder.tsx  chatarea.tsx  container.tsx  createGig.tsx  createPricing.tsx  escrow.tsx  feedback.tsx  flipword.tsx  gigs.tsx  inputs.tsx  loader.tsx  markComplete.tsx  myOrders.tsx  navbar.tsx  navigationBar.tsx  new.tsx  orders.tsx  phantomwrapper.tsx  profileMenu.tsx  raiseDispute.tsx  resolveDispute.tsx  roleBasedNavbar.tsx  rolebased.tsx  rolebasedRedirect.tsx  sellerDash.tsx  sellerForm.tsx  sellerGigs.tsx  sellerNavbar.tsx  sellerOrders.tsx  walletConnect.tsx
client/lib/: auth.ts  hooks.ts  icons.tsx  idl.json  niches.ts  populate.ts  socketManager.ts  types.ts  utils.ts
client/prisma/: schema.prisma
programs/dfiverr/: Cargo.toml
programs/dfiverr/src/: lib.rs
socket/: package-lock.json  package.json  tsconfig.json
socket/db/: db.ts
socket/lib/: functions.ts
socket/prisma/: schema.prisma
socket/src/: handlers.ts  index.ts  server.ts  types.ts
tests/: dfiverr.ts  escrow.ts
(+104 files in other folders)
