[package]
name = "d_fiverr"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "d_fiverr"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.29.0"

[dev-dependencies]
solana-program-test = "1.18.22"
solana-sdk = "1.18.22"
tokio = { version = "1.14.1", features = ["full"] }
